# ros_gsplines

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml  setup.py
msg/: JointGSplineTrajectory.msg
ros_gsplines/: package.xml  setup.py
ros_gsplines/src/ros_gsplines/: trajectory_message.py
src/ros_gsplines/: __init__.py  gspline_message.py  trajectory_message.py
